--- a/frontend/views/partials/header.ejs
+++ b/frontend/views/partials/header.ejs
@@ -104,7 +104,7 @@
                             </li>
                             <li>
                                 <a href="/usage/recent-mint">
-                                    <div class="white-link-text">Recently Minted</div>
+                                    <div class="white-link-text">Recently Sold</div>
                                 </a>
                             </li>
 
