charts now on v2

--- a/frontend/views/event-profile.ejs
+++ b/frontend/views/event-profile.ejs
@@ -111,7 +111,7 @@
                                     <% for(var i = 0; i < locals.eventData.tickets.length ; i++) {%>
                                                 <tr>
                                                     <td>
-                                                        <%= locals.eventData.tickets[i].d %>
+                                                        <%= locals.eventData.tickets[i].id %>
                                                     </td>
                                                     <td>
                                                         <%= locals.eventData.tickets[i].usageEvents.type %>
