--- a/frontend/views/partials/header.ejs
+++ b/frontend/views/partials/header.ejs
@@ -125,7 +125,7 @@
                             </li>
                             <li>
                                 <a href="/ticketeers">
-                                    <div class="white-link-text">Ticketeers</div>
+                                    <div class="white-link-text">Integrators</div>
                                 </a>
                             </li>
                             
